--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "gatsby": "^2.19.12",
     "gatsby-theme-catalyst-core": "^0.25.0",
+    "gatsby-theme-catalyst-footer": "^0.2.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
