--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "gatsby-theme-catalyst-core": "^0.25.0",
     "gatsby-theme-catalyst-footer": "^0.2.2",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "typeface-eb-garamond": "^1.1.4"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
